--- a/project_management_app/register/templates/register/account_activation_valid.html
+++ b/project_management_app/register/templates/register/account_activation_valid.html
@@ -21,7 +21,7 @@
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                             <path fill-rule="evenodd"
                                   d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                        <h4>Account and been Activated</h4>
+                        <h4>Account has been Activated</h4>
                         <p>Thank you for activating your account.</p>
                         <p>Click here to return to <a href="/login">Login</a>.</p>
                     </div>
