populated fields for sprint modal

--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -149,7 +149,7 @@
             <tr data-category="{% for tag in task.tags.all %}{{ tag }} {% endfor %}" data-task-id="{{ task.id }}">
                 
                 <td>
-                    <a href="#" data-toggle="modal" data-target="#editTaskModal" data-task-id="{{ task.id }}" data-task-type ="{{ task.type }}">{{ task.name }}</a>
+                    <a href="#" data-toggle="modal" data-target="#editTaskModal" data-task-id="{{ task.id }}" data-task-type ="{{ task.type}}" data-task-description ="{{ task.description }}" data-task-priority = "{{ task.priority }}" data-task-stage = "{{ task.stage }}" data-task-created_date = "{{ task.created_date}}">{{ task.name }}</a>
                 </td>
                 <td>{{task.story_point}}</td>       
                 <td>{% for tag in task.tags.all %}
@@ -333,6 +333,12 @@
     $(document).on('click', 'a[data-toggle="modal"][data-target="#editTaskModal"]', function () {
         var taskId = $(this).data('task-id');
         var taskName = $(this).text();
+        var taskType = $(this).data('task-type');
+        var taskDescription = $(this).data('task-description');
+        var taskPriority = $(this).data('task-priority');
+        var taskStage = $(this).data('task-stage');
+        var taskCreatedDate =  $(this).data('task-created_date');
+
         
         var logHoursInput = $("#editTaskHours");
         var totalHoursInput = $("#editTaskTotalHours");
@@ -348,13 +354,22 @@
                 
                 var taskAssignee = data.assignee; 
                 var taskStatus = data.status;
-                var tasktype = data.type;
+                var taskType = data.type;
+                var taskDescription = data.description; 
+                var taskPriority = data.priority;
+                var taskStage = data.stage; 
+                var taskCreatedDate = data.created_date;
                 
                 // Update the modal form fields for name, status, and type
                 $('#editTaskModal #name').val(taskName);
                 $('#editTaskModal #assignee').val(taskAssignee);
                 $('#editTaskModal #status').val(taskStatus);
-                $('#editTaskModal #type').val(tasktype);
+                $('#editTaskModal #type').val(taskType);
+                $('#editTaskModal #type').val(taskDescription);
+                $('#editTaskModal #priority').val(taskPriority);
+                $('#editTaskModal #stage').val(taskStage);
+                $('#editTaskModal #created_date').val(taskCreatedDate);
+
             },
             error: function () {
                 // Handle error if the AJAX request fails
