fix title tags in base and logins files

--- a/project_management_app/register/templates/registration/password_reset_confirm.html
+++ b/project_management_app/register/templates/registration/password_reset_confirm.html
@@ -2,7 +2,9 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
-{% block title %}Enter new password{% endblock %}
+{% block title %}
+<title>Enter new password</title>
+{% endblock %}
 
 {% block authentication %}
 <div class="text-center">
