--- a/project_management_app/register/templates/registration/login.html
+++ b/project_management_app/register/templates/registration/login.html
@@ -2,7 +2,9 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
-{% block title %}Login{% endblock %}
+{% block title %}
+<title>Login</title>
+{% endblock %}
 
 {% block authentication %}
 <div class="text-center">
