--- a/project_management_app/register/templates/registration/password_reset_complete.html
+++ b/project_management_app/register/templates/registration/password_reset_complete.html
@@ -2,7 +2,9 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
-{% block title %}Password Reset Complete{% endblock %}
+{% block title %}
+<title>Password Reset Complete</title>
+{% endblock %}
 
 {% block authentication %}
 <div class="text-center">
