--- a/project_management_app/register/templates/registration/password_reset_done.html
+++ b/project_management_app/register/templates/registration/password_reset_done.html
@@ -2,7 +2,9 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
-{% block title %}Password Reset Done{% endblock %}
+{% block title %}
+<title>Reset Done</title>
+{% endblock %}
 
 {% block authentication %}
 <div class="text-center">
