add logout to side nav

--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -155,6 +155,7 @@
             <a href="{% url 'project_backlog' %}">Project Backlog</a>
             <a href="{% url 'sprint_backlog' %}">Sprint Backlog</a>
             <a href="{% url 'sprint_backlog_archived' %}"> Archived Sprints</a>
+            <a href="{% url 'logout' %}">Logout</a>
         </div>
         {% block content %}
         {% endblock %}
