Move headings out of the content block and have dedicated block for child template of base

--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -6,9 +6,12 @@
     <title>Create Graphs</title>
 {% endblock %}
 
+<!-- Header -->
+{% block header %}
+    <h1>Create Graph</h1>
+{% endblock %}
 
 {% block content %}
-    <h1>Create Graph</h1>
    <!-- Graph View Dropdown -->
     <label for="graphView"></label>
     <select id="graphView" onchange="changeGraphView()">
