--- a/project_management_app/project_task/templates/project_task/home.html
+++ b/project_management_app/project_task/templates/project_task/home.html
@@ -5,8 +5,13 @@
 {% block title %}
 <title>Home</title>
 {% endblock %}
+
+<!-- Header -->
+{% block header %}
+    <h1>Home</h1>
+{% endblock %}
+
 {% block content %}
-<h1>Home</h1>
 <!-- Button to trigger the "Create New Sprint" modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewSprint">
     Create Sprint
