--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -5,9 +5,13 @@
 {% endblock %}
 
 
-{% block content %}
+<!-- Header -->
+{% block header %}
     <h1>Sprint Backlog</h1>
+{% endblock %}
 
+
+{% block content %}
     <div class="container-fluid">
         <table class="table table-striped table-bordered">
             <thead class="thead-light">
