create the form and load the form in the admin page

--- a/project_management_app/register/templates/admin/base.html
+++ b/project_management_app/register/templates/admin/base.html
@@ -3,7 +3,11 @@
 <html lang="{{ LANGUAGE_CODE|default:'en-us' }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 <head>
 <title>{% block title %}{% endblock %}</title>
+{%  block css %} {% endblock %}
 <link rel="stylesheet" href="{% block stylesheet %}{% static 'admin/css/base.css' %}{% endblock %}">
+
+
+
 <style>
     #side-nav-bar {
         float: left;
