--- a/project_management_app/register/templates/admin/create_graph.html
+++ b/project_management_app/register/templates/admin/create_graph.html
@@ -19,8 +19,8 @@
                 <!-- Modal Body -->
                 <div class="modal-body">
                     <div class="d-grid gap-3 text-start">
-                        {{ create_hour_graph_form.person| as_crispy_field }}
-                        {{ create_hour_graph_form.date| as_crispy_field}}
+{#                        {{ create_hour_graph_form.person| as_crispy_field }}#}
+{#                        {{ create_hour_graph_form.date| as_crispy_field}}#}
                     </div>
                 </div>
 
