added the sprint name to sprint board once added the user will see the name of sprint

--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -1,17 +1,12 @@
 {% extends "project_task/base.html" %}
 
 {% block title %}
-<!-- <title>Sprint Board</title> -->
-{% for sprint in sprints %}
-    <title>{{ sprint.name }}</title>
-{% endfor %}
+<title>Sprint Board</title>
 {% endblock %}
 
 <!-- Header -->
 {% block header %}
-{% for sprint in sprints %}
-    <h1>{{ sprint.name }}</h1>
-{% endfor %}
+<h1>{{sprint.name}}</h1>
 {% endblock %}
 
 {% block content %}
