Added content heading for password_reset_done.html and password_reset_form.html

--- a/project_management_app/register/templates/registration/password_reset_done.html
+++ b/project_management_app/register/templates/registration/password_reset_done.html
@@ -6,6 +6,11 @@
 <title>Reset Done</title>
 {% endblock %}
 
+<!-- Header -->
+{% block header %}
+    <h1>Reset Done</h1>
+{% endblock %}
+
 {% block authentication %}
 <div class="text-center">
     <!-- New Box Container -->
