--- a/project_management_app/register/templates/registration/password_reset_form.html
+++ b/project_management_app/register/templates/registration/password_reset_form.html
@@ -3,7 +3,12 @@
 {% load crispy_forms_filters %}
 
 {% block title %}
-<title>Password</title>
+<title>Password Reset</title>
+{% endblock %}
+
+<!-- Header -->
+{% block header %}
+    <h1>Password Reset</h1>
 {% endblock %}
 
 {% block authentication %}
